--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="time;" URL="/ReadMeTest/pages/home.html" />
+<meta http-equiv="refresh" content="time; URL=/ReadMeTest/pages/home.html" />
