--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<meta http-equiv="refresh" content="time; URL=/ReadMeTest/pages/home.html" />
+<meta http-equiv="refresh" content="1; URL=/ReadMeTest/pages/home.html" />
+<body>
+  <p>Please Wait!</p>
+</body>
