--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<meta http-equiv="refresh" content="1; URL=/ReadMeTest/pages/home.html" />
-<body>
-  <p>Please Wait!</p>
-</body>
+<!DOCTYPE html>
+<html>
+ 
+  <head>
+    <meta http-equiv="refresh" content="1; URL=/ReadMeTest/pages/home.html" />
+  </head>
+  
+  <body>
+  <p style="font-size: xx-large; font-weight: 500; text-align: center;">Please Wait!</p>
+  </body>
+  
+</html>
